# fur

./: .gitignore  CMakeLists.txt  README.md  example_scene.yaml  sphere.yaml
include/: error.hpp  job_master.hpp  parser.hpp
include/math/: float.hpp  matrix.hpp  pdf.hpp  quaternion.hpp  random.hpp  sampler.hpp  transform.hpp  util.hpp  vector.hpp
include/tracer/: bounds.hpp  bvh_tree.hpp  camera.hpp  embree_accel.hpp  hair.hpp  intersection.hpp  light_source.hpp  material.hpp  model.hpp  point_light.hpp  ray.hpp  rect_light.hpp  scene.hpp  shape.hpp  spectrum.hpp  sphere_light.hpp  texture.hpp
include/tracer/materials/: dipole.hpp  ggx.hpp  hairpt.hpp  lambert.hpp  light.hpp  phong.hpp  sss.hpp  torrance.hpp
include/tracer/shapes/: catmullrom_spline.hpp  cubic_bezier.hpp  de_box.hpp  de_inf_spheres.hpp  de_mandelbulb.hpp  de_quad.hpp  de_sphere.hpp  de_triangle.hpp  disk.hpp  funnel.hpp  quad.hpp  sphere.hpp  triangle.hpp  tube.hpp
scenes/: example_scene.yaml  yellow.yaml
src/: error.cpp  job_master.cpp  main.cpp  parser.cpp  tracer.cpp
src/math/: pdf.cpp  quaternion.cpp  random.cpp  sampler.cpp  transform.cpp  util.cpp
src/tracer/: bvh_tree.cpp  camera.cpp  embree_accel.cpp  hair.cpp  light_source.cpp  model.cpp  point_light.cpp  rect_light.cpp  scene.cpp  shape.cpp  spectrum.cpp  sphere_light.cpp  texture.cpp
src/tracer/materials/: dipole.cpp  ggx.cpp  hairpt.cpp  lambert.cpp  light.cpp  phong.cpp  sss.cpp
src/tracer/shapes/: catmullrom_spline.cpp  cubic_bezier.cpp  de_box.cpp  de_inf_spheres.cpp  de_mandelbulb.cpp  de_quad.cpp  de_sphere.cpp  de_triangle.cpp  disk.cpp  funnel.cpp  quad.cpp  sphere.cpp  triangle.cpp  tube.cpp
test/vector/: test_vector.cpp
